force-app/main/default/objects/Incident__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>ORCA_Users__c</referenceTo>
    <relationshipLabel>Incidents (Approver)</relationshipLabel>
    <relationshipName>Incidents2</relationshipName>
    <type>Lookup</type>
</CustomField>