force-app/main/default/objects/Incident__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Back Office</fullName>
            </value>
            <value>
                <fullName>Front Office</fullName>
            </value>
            <value>
                <fullName>Middle Office</fullName>
            </value>
            <value>
                <fullName>External to BP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>