force-app/main/default/objects/Incident__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <label>Book</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tresury Reading</fullName>
            </value>
            <value>
                <fullName>Cactus</fullName>
            </value>
            <value>
                <fullName>FVC</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>GEP</fullName>
            </value>
            <value>
                <fullName>GREC</fullName>
            </value>
            <value>
                <fullName>GLIGHT</fullName>
            </value>
            <value>
                <fullName>GDIST</fullName>
            </value>
            <value>
                <fullName>Global Options</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>GLPG</fullName>
            </value>
            <value>
                <fullName>JAC</fullName>
            </value>
            <value>
                <fullName>Structured Products</fullName>
            </value>
            <value>
                <fullName>GLNG</fullName>
            </value>
            <value>
                <fullName>London G&amp;P</fullName>
            </value>
            <value>
                <fullName>Financial Org Products</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>