force-app/main/default/objects/Incident__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Teams</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Risk</fullName>
            </value>
            <value>
                <fullName>Front Office</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>