force-app/main/default/objects/Incident__c/fields/Has_Tactical_Actions__c.field-meta.xml
<CustomField>
    <fullName>Has_Tactical_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Tactical Actions?</label>
    <type>Checkbox</type>
</CustomField>