force-app/main/default/objects/Incident__c/fields/Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date__c</fullName>
    <label>Incident Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>