force-app/main/default/objects/Incident__c/fields/Incident_Year__c.field-meta.xml
<CustomField>
    <fullName>Incident_Year__c</fullName>
    <formula>TEXT(YEAR(Incident_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Year</label>
    <type>Text</type>
</CustomField>