force-app/main/default/objects/Incident__c/fields/Key_Impact__c.field-meta.xml
<CustomField>
    <fullName>Key_Impact__c</fullName>
    <label>Key Impact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>