force-app/main/default/objects/Incident__c/fields/Key_Risk_Short_Title__c.field-meta.xml
<CustomField>
    <fullName>Key_Risk_Short_Title__c</fullName>
    <label>Key Risk Short Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>