force-app/main/default/objects/Incident__c/fields/Lessons_Learnt__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learnt__c</fullName>
    <label>Lessons Learnt</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>