force-app/main/default/objects/Incident__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Jakarta</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Tokyo</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>Vancouver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>