force-app/main/default/objects/Incident__c/fields/Operational_Excellence_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Operational_Excellence_Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operational Excellence Contacts</label>
    <referenceTo>ORCA_Users__c</referenceTo>
    <relationshipLabel>Incidents (Operational Excellence Contacts)</relationshipLabel>
    <relationshipName>Incidents3</relationshipName>
    <type>Lookup</type>
</CustomField>