force-app/main/default/objects/Incident__c/fields/Ops_Risk_Region__c.field-meta.xml
<CustomField>
    <fullName>Ops_Risk_Region__c</fullName>
    <label>Ops Risk Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GO-A</fullName>
            </value>
            <value>
                <fullName>GO-E</fullName>
            </value>
            <value>
                <fullName>GO-EH</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
            <value>
                <fullName>NAGP</fullName>
            </value>
            <value>
                <fullName>OpEx Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>