force-app/main/default/objects/Incident__c/fields/Recorder__c.field-meta.xml
<CustomField>
    <fullName>Recorder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recorder</label>
    <referenceTo>ORCA_Users__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>