force-app/main/default/objects/Incident__c/fields/Regional_Business__c.field-meta.xml
<CustomField>
    <fullName>Regional_Business__c</fullName>
    <label>Regional Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GO-A</fullName>
            </value>
            <value>
                <fullName>GO-E</fullName>
            </value>
            <value>
                <fullName>GO-EH</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
            <value>
                <fullName>NAGP</fullName>
            </value>
            <value>
                <fullName>OpEx-Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>