force-app/main/default/objects/Incident__c/fields/Repeat_Incident__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Incident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeat Incident</label>
    <type>Checkbox</type>
</CustomField>