force-app/main/default/objects/Incident__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>ORCA_Users__c</referenceTo>
    <relationshipLabel>Incidents (Reviewer)</relationshipLabel>
    <relationshipName>Incidents1</relationshipName>
    <type>Lookup</type>
</CustomField>