force-app/main/default/objects/Incident__c/fields/Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category__c</fullName>
    <label>Risk Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>Near Miss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>