force-app/main/default/objects/Incident__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ops Risk Review</fullName>
            </value>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Complete Actions</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>