force-app/main/default/objects/Incident__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>HSSE</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>On Exchange</fullName>
            </value>
            <value>
                <fullName>PPM</fullName>
            </value>
            <value>
                <fullName>IT&amp;S</fullName>
            </value>
            <value>
                <fullName>Global Valuations</fullName>
            </value>
            <value>
                <fullName>GFS - IData</fullName>
            </value>
            <value>
                <fullName>GFS Settlements</fullName>
            </value>
            <value>
                <fullName>Commodity Risk</fullName>
            </value>
            <value>
                <fullName>GBS CDD</fullName>
            </value>
            <value>
                <fullName>GBS ARC</fullName>
            </value>
            <value>
                <fullName>Operations Scheduling</fullName>
            </value>
            <value>
                <fullName>Strategic Organisation</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Trade Analytics</fullName>
            </value>
            <value>
                <fullName>FVC</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Regulatory Affairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>