force-app/main/default/objects/Incident__c/fields/Timeline_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Timeline_of_Events__c</fullName>
    <label>Timeline of Events</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>