force-app/main/default/objects/Incident__c/fields/What_Controls_didn_t_operate__c.field-meta.xml
<CustomField>
    <fullName>What_Controls_didn_t_operate__c</fullName>
    <label>What Controls didn&#39;t operate?</label>
    <type>TextArea</type>
</CustomField>