force-app/main/default/objects/Incident__c/fields/Who_is_accountable_for_Lessons_Learnt__c.field-meta.xml
<CustomField>
    <fullName>Who_is_accountable_for_Lessons_Learnt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who is accountable for Lessons Learnt</label>
    <referenceTo>ORCA_Users__c</referenceTo>
    <relationshipLabel>Incidents (Who is accountable for Lessons Learnt)</relationshipLabel>
    <relationshipName>Incidents4</relationshipName>
    <type>Lookup</type>
</CustomField>