force-app/main/default/objects/Incident__c/recordTypes/Search_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Search_Record_Type</fullName>
    <active>true</active>
    <label>Search Record Type</label>
</RecordType>