force-app/main/default/objects/Incident__c/validationRules/DRAFT_stage_mandatory_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>DRAFT_stage_mandatory_fields</fullName>
    <active>true</active>
    <description>DRAFT stage mandatory fields</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c , &#39;Draft&#39;),
  OR( ISBLANK(Title__c), 
      ISBLANK(Incident_Date__c), 
      ISBLANK(Recorder__c),
      ISBLANK( Incident_Description__c ))
)</errorConditionFormula>
    <errorMessage>Please fill Mandatory data for Stage &#39;Draft&#39;</errorMessage>
</ValidationRule>