force-app/main/default/objects/Incident__c/validationRules/Ops_Risk_Review_Mandatory_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Ops_Risk_Review_Mandatory_fields</fullName>
    <active>true</active>
    <description>Ops_Risk_Review_Mandatory_fields</description>
    <errorConditionFormula>AND( 
ISPICKVAL( Status__c , &#39;Ops Risk Review&#39;), 
OR( ISPICKVAL( Ops_Risk_Region__c, &#39;&#39; ),
    If( Repeat_Incident__c==true, false, true ),
     ISBLANK( Reviewer__c ) 
    )
)</errorConditionFormula>
    <errorMessage>Please fill mandatory details for Ops Risk Review fields</errorMessage>
</ValidationRule>