force-app/main/default/objects/Incident__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Risk_Category__c</columns>
    <columns>Recorder__c</columns>
    <columns>Reviewer__c</columns>
    <columns>Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>